test/code/test_class_extends_not_found.php
<?php

class Noob 
      extends 
          Expert
{
}
